Fixed BUG #16175: Memory leak in rpl_trigger.test   Allocating/freeing memory for the db member of THD   is wholy managed by slave thread.